# LexBudget

./: .gitignore  .slugignore  Assistants_API.py  BudgetChatbot_AssistAPI.py  BudgetChatbot_CompletionAPI.py  Chatbot.py  ChatbotHelper.py  ChatbotSplit.py  Dockerfile  LHS Chatbot.py  LHS_chatbot.py  Procfile  README.md  config.ini  config.json  config_arlington.json  config_remotedb.json  docker-build.sh  docker-run.bat  dummyResponse.pickle  pyproject.toml  requirements.txt  setup.sh  vectorsource_link.json
.streamlit/: config.toml  secrets.toml
chromadb/262ba899-e1a1-4bfc-ab1b-0118f01fd1b5/: index_metadata.pickle
chromadb_arlington/1fc57442-a700-439d-8e21-c8e80e7169cd/: index_metadata.pickle
chromadb_arlington/43eab07a-e165-4014-b20f-b5c9dddb03f3/: index_metadata.pickle
chromadb_arlington/bd88befb-f944-4992-8cfa-0dcb2b008028/: index_metadata.pickle
chromadb_arlington/fe79a795-a54c-4d32-8161-44940b672833/: index_metadata.pickle
chromadb_data/be8305ca-493b-441c-bb3a-541dc2917cd1/: index_metadata.pickle
chromadb_metadata/4b8ada0e-4e55-41bf-b285-f4f1107591e9/: index_metadata.pickle
pages/: 2_LLaMa Chatbot.py  2_LangChain_Agent_ReACT.py  2_OpenAI_LangChain.py  3_Chat_Completions.py  3_Lexington and Arlington Chatbot.py  4_Claude3.py  5_Microsoft_Copilot.py  6_Metadata.py  About Us.py
scripts/: arlington_vector_metadata.json  create_assistant.py  create_chromadb.py  create_chromadb_remote.py  delete_chromadb_remote.py  read_chromadb_remote.py  record_docs_scraper_bfs.py  school_docs_metadata.json  update_chromadb.py  update_chromadb_remote.py  update_chromadb_remote_metadatas.py  vector_metadata.json  web-2-pdf.py
test_pages/: 3_Chat_Completions.py  6_Metadata.py
tests/: ground_truth.json  mock_chatbot_answers.json  test_create_assistant.py  test_framework.py
